--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -86,7 +86,7 @@
     <string name="download">Download</string>
     <string name="download_file_error">Errore nel download del file</string>
     <string name="install_error">Errore di installazione!</string>
-    <string name="invalid_zip">Lo zip non è un modulo Magisk!</string>
+    <string name="invalid_zip">Il file zip non è un modulo Magisk!</string>
     <string name="reboot">Riavvia</string>
     <string name="downloading_toast">Download di %1$s</string>
     <string name="magisk_update_title">Disponibile un nuovo aggiornamento di Magisk!</string>
